# python-examples

./: README.md
examples/flask/: README.md  pyproject.toml
examples/flask/src/flaskr/: __init__.py
examples/flask/tests/: conftest.py
examples/flask/tests/flaskr/: test___init__.py
examples/pypi-setuptools/: README.md  pyproject.toml
examples/pyproject-setuptools/: README.md  pyproject.toml
examples/pytest/: README.md  pyproject.toml
examples/pytest/src/ex_pytest/: __init__.py
examples/pytest/tests/: conftest.py
examples/pytest/tests/ex_pytest/: test___init__.py
examples/pytest/tests/example_pytest/: test___init__.py
