[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_flask"
version = "0.0.1"
readme = "README.md"
description = "A small example flask"
requires-python = ">=3.7"

dependencies = [
    "flask==3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
