[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ex_pytest"
version = "0.0.1"
readme = "README.md"
description = "A small example pytest"
requires-python = ">=3.7"
license = {text = "MIT License"}
keywords = ["example", "python"]
authors = [
    { name="Example Author", email="author@example.com" },
]
maintainers = [
    { name="Example Author", email="author@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
]

[project.urls]
"Homepage" = "https://github.com/yuyahnd/python-examples"
"Bug Tracker" = "https://github.com/yuyahnd/python-examples/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
